<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="com.example.fanqfang.tqfapplication.TQF_3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:paddingTop="16dp">

            <TextView
                style="@style/main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:text="TQF" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:paddingBottom="2dp">

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/data"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="25dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/tqf_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bgch"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="60dp"
                    android:src="@drawable/icon3" />

                <TextView
                    style="@style/chFont"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="@string/tqf3" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/txtNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#260d0c0c"
                        android:text="@string/no" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/txtCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#260d0c0c"
                        android:text="@string/code" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/txtSubject"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#260d0c0c"
                        android:text="@string/subject" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/txtTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#260d0c0c"
                        android:text="@string/name" />
                </LinearLayout>


            </LinearLayout>


            <ListView
                android:id="@+id/ListView"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:layout_below="@id/txtTitle">

            </ListView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:background="#ff9f00"
                    android:text="X"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/year"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom">

            <LinearLayout
                android:id="@+id/y1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#000000"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <TextView
                    style="@style/YearFont"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/y1" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/y2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#000000"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <TextView
                    style="@style/YearFont"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/y2" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/y3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#000000"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <TextView
                    style="@style/YearFont"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/y3" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/y4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#000000"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <TextView
                    style="@style/YearFont"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/y4" />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
