<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#101a23"
    tools:context="com.example.fanqfang.tqfapplication.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:paddingTop="16dp"
            android:layout_weight="44">

            <TextView
                style="@style/main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:text="TQF" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:paddingBottom="2dp">

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/bar_chart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="bottom"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/tqf_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ch2">

                <TextView
                    style="@style/chFont"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/tqf2" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/tqf_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bgch"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="70dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_weight="1.7">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/icon3" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="15dp"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                style="@style/chFont"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/tqf3" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/sh_tqf_3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        </LinearLayout>

                    </LinearLayout>


                </LinearLayout>
                <LinearLayout
                    android:id="@+id/tqf_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bgch">

                    <LinearLayout
                        android:layout_width="70dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_weight="1.7">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/icon4" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="15dp"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                style="@style/chFont"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/tqf4" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/sh_tqf_4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/tqf_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bgch">

                    <LinearLayout
                        android:layout_width="70dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_weight="1.7">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/icon5" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="15dp"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                style="@style/chFont"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/tqf5" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/sh_tqf_5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        </LinearLayout>

                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tqf_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bgch">

                    <LinearLayout
                        android:layout_width="70dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_weight="1.7">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/icon6" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="15dp"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                style="@style/chFont"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/tqf6" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/sh_tqf_6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/y1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp">

                    <TextView
                        style="@style/YearFont"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/y1" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/y2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp">

                    <TextView
                        style="@style/YearFont"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/y2" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/y3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp">

                    <TextView
                        style="@style/YearFont"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/y3" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/y4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp">

                    <TextView
                        style="@style/YearFont"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/y4" />
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
</RelativeLayout>
